--- a/Android_Basic/FastCampusAndroid/app/src/main/AndroidManifest.xml
+++ b/Android_Basic/FastCampusAndroid/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapplication" >
+    package="com.example.myapplication">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication" >
+        android:theme="@style/Theme.MyApplication">
+        <activity
+            android:name=".ActivityThree"
+            android:exported="false" />
+        <activity
+            android:name=".ActivityTwo"
+            android:exported="false" />
+        <activity
+            android:name=".Intent_One"
+            android:exported="false" />
         <activity
             android:name=".Intent_Two"
             android:exported="false" />
@@ -31,8 +40,8 @@
             android:name=".TestActivity"
             android:exported="false" />
         <activity
-            android:name=".Intent_One"
-            android:exported="true" >
+            android:name=".ActivityOne"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
