--- a/Android_Basic/FastCampusAndroid/app/src/main/AndroidManifest.xml
+++ b/Android_Basic/FastCampusAndroid/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.myapplication">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
+        <activity
+            android:name=".Homework_2_me"
+            android:exported="false" />
+        <activity
+            android:name=".ActivityOne"
+            android:exported="false" />
         <activity
             android:name=".ActivityThree"
             android:exported="false" />
@@ -40,11 +48,19 @@
             android:name=".TestActivity"
             android:exported="false" />
         <activity
-            android:name=".ActivityOne"
+            android:name=".Homework_2_lecture"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW"/>
+
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.LAUNCHER" />
+
+                <data
+                    android:host="*"
+                    android:scheme="http"/>
             </intent-filter>
         </activity>
     </application>
