--- a/Android_Basic/FastCampusAndroid/app/src/main/AndroidManifest.xml
+++ b/Android_Basic/FastCampusAndroid/app/src/main/AndroidManifest.xml
@@ -13,10 +13,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
-            android:name=".GlideActivity"
-            android:exported="true" >
+            android:name=".AddViewActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".GlideActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
