15.채팅 화면 만들기 과제

--- a/Android_Basic/FastCampusAndroid/app/src/main/AndroidManifest.xml
+++ b/Android_Basic/FastCampusAndroid/app/src/main/AndroidManifest.xml
@@ -13,11 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".RecyclerViewHomework"
+            android:exported="true" />
+        <activity
             android:name=".ListViewActivity"
             android:exported="false" />
         <activity
             android:name=".RecyclerViewActivity"
-            android:exported="true">
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
